# pomotimer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: action_button.h  circular_progress_bar.h  clickable_label.h  clickablelabel.h  clock_face.h  device.h  main_page.h  timer.h  timer_page.h  widget_window.h
include/pages/: page_main.h  page_settings.h  page_settings_timer.h
include/ui/: action_button.h  active_element.h  circular_progress_bar.h  clickable_label.h  clock_face.h  input.h  interactable_element.h  menu_page.h  page.h  text_label.h  text_label_input.h  text_label_link.h  timer_page.h  window.h
include/utils/: page_controller.h  ringtone.h  settings.h  state_manager.h
resources/: pomo.qrc
src/: action_button.cpp  circular_progress_bar.cpp  clickable_label.cpp  clock_face.cpp  device.cpp  main.cpp  main_page.cpp  timer.cpp  timer_page.cpp  widget_window.cpp
src/pages/: page_main.cpp  page_settings.cpp  page_settings_timer.cpp
src/ui/: action_button.cpp  active_element.cpp  circular_progress_bar.cpp  clickable_label.cpp  clock_face.cpp  input.cpp  interactable_element.cpp  menu_page.cpp  page.cpp  text_label.cpp  text_label_input.cpp  text_label_link.cpp  timer_page.cpp  window.cpp
src/utils/: page_controller.cpp  ringtone.cpp  settings.cpp
ui/: timer.ui
